--- a/src/main/resources/templates/memo.html
+++ b/src/main/resources/templates/memo.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-lg-8">
             <article>
-                <input type="hidden" id="article-id" th:value="${memo.id}">
+                <input type="hidden" id="memo-id" th:value="${memo.id}">
                 <header class="mb-4">
                     <h1 class="fw-bolder mb-1" th:text="${memo.content}"></h1>
                     <div class="text-muted fst-italic mb-2" th:text="|Posted on ${#temporals.format(memo.createdAt, 'yyyy-MM-dd HH:mm')}|"></div>
@@ -32,4 +32,6 @@
         </div>
     </div>
 </div>
+
+<script src="/js/memo.js"></script>
 </body>
