--- a/src/main/resources/templates/memoList.html
+++ b/src/main/resources/templates/memoList.html
@@ -2,13 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>블로그 글 목록</title>
+    <title>MemoList</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
 <div class="p-5 mb-5 text-center</> bg-light">
     <h1 class="mb-3">My Memo</h1>
-    <h4 class="mb-3">블로그에 오신 것을 환영합니다.</h4>
+    <h4 class="mb-3">Welcome.</h4>
 </div>
 
 <div class="container">
@@ -27,6 +27,8 @@
         </div>
         <br>
     </div>
+
+    <button type="button" class="btn btn-secondary" onclick="location.href='/logout'">로그아웃</button>
 </div>
 </body>
 </html>
