--- a/src/main/resources/templates/memo.html
+++ b/src/main/resources/templates/memo.html
@@ -18,7 +18,7 @@
                 <input type="hidden" id="memo-id" th:value="${memo.id}">
                 <header class="mb-4">
                     <h1 class="fw-bolder mb-1" th:text="${memo.content}"></h1>
-                    <div class="text-muted fst-italic mb-2" th:text="|Posted on ${#temporals.format(memo.createdAt, 'yyyy-MM-dd HH:mm')}|"></div>
+                    <div class="text-muted fst-italic mb-2" th:text="|Posted on ${#temporals.format(memo.createdAt, 'yyyy-MM-dd HH:mm')} By ${memo.author}|"></div>
                 </header>
                 <section class="mb-5">
                     <p class="fs-5 mb-4" th:text="${memo.content}"></p>
